# translation_benchmark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: convert_ct2.py  download_models.py  download_offline.sh  install_offline.sh  run_models.py
src/translation_benchmark/: __init__.py  cli.py  context.py  guards.py  langs.py  subtitles.py
src/translation_benchmark/benchmark/: __init__.py  metrics.py  runner.py
src/translation_benchmark/models/: __init__.py  base.py  chat.py  dummy.py  paths.py  registry.py  seq2seq.py  vllm_engine.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_context.py  test_convert_script.py  test_download_script.py  test_engines.py  test_guards.py  test_paths.py  test_quant.py  test_registry.py  test_subtitles.py  test_translation_pipeline.py
tests/data/: night_shift.en.srt  night_shift.ko.srt
