[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translation-benchmark"
version = "0.1.0"
description = "Test and benchmark harness for open-weight machine translation models on real-world film/video subtitles (.srt)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "srt>=3.5",
    "sacrebleu>=2.4",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
# Heavy inference stack — only needed to run real models, not for tests.
models = [
    "torch>=2.1",
    "transformers>=4.46",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    # Lets transformers load AWQ/GPTQ pre-quantized repos (e.g. qwen3-*@awq).
    "gptqmodel>=2.0",
]
# CPU-efficient NLLB-200 backend.
ct2 = ["ctranslate2>=4.0"]
# Optimized serving for the chat models (GPU required); the engine talks to
# a spawned `vllm serve` process via the OpenAI-compatible API.
vllm = ["vllm>=0.8", "openai>=1.0"]
# Neural quality metric (slow, needs torch).
comet = ["unbabel-comet>=2.2"]
dev = ["pytest>=8.0"]

[project.scripts]
tb = "translation_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/translation_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
